Finish K Pair sum