@@ -5,26 +5,23 @@ import java.util.Arrays;
 import java.util.List;
 
 /**
- * LeetCode #15, same requirement as <i>ThreeSum</i> but it need to return the index
+ * LeetCode #15, same requirement as <i>ThreeSum</i> but it needs to return the index
  */
 public class ThreeSumList {
     public List<List<Integer>> threeSum(int[] nums) {
         int len = nums.length;
-        List<List<Integer>> ret = new ArrayList<List<Integer>>();
+        List<List<Integer>> ret = new ArrayList<>();
         Arrays.sort(nums);
-        for (int i = 0; i < len - 2; i++)
+        for (int i = 0; i < len - 2; i++) {
             if (i == 0 || nums[i] != nums[i - 1]) {
                 int target = -nums[i];
                 int head = i + 1, tail = len - 1;
                 while (tail > head) {
                     if (nums[head] + nums[tail] == target) {
-                        ret.add(Arrays.asList(nums[i], nums[head], nums[tail]));
-
-                        while (tail > i && nums[tail] == nums[tail - 1])
-                            tail--;
+                        ret.add(List.of(nums[i], nums[head], nums[tail]));
+                        while (tail > i && nums[tail] == nums[tail - 1]) tail--;
                         tail--;
-                        while (head < i && nums[head] == nums[head++])
-                            head++;
+                        while (head < i && nums[head] == nums[head++]) head++;
                         head++;
                     } else if (nums[head] + nums[tail] > target) {
                         tail--;
@@ -33,6 +30,7 @@ public class ThreeSumList {
                     }
                 }
             }
+        }
         return ret;
     }
 }
